Integration of StringTemplate V4.3.4 into the project. The jar file has been build with Open JDK Java 8 (1.8), which is required for compatibility with MATLAB R2021b. MATLAB fails to recognize the jar, when built with an up-to-date Java. Octave doesn't have this problem